--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -108,14 +108,14 @@ Leicester LE1 9BH United Kingdom\\[.2cm]
 %%\hrule
 \section*{Current Academic Roles}
 ---\emph{Senior Lecturer in Music and Audio Technology}, Leicester Media School, Faculty of Computing, Engineering and Media, DMU, Leicester, UK.\\
----\emph{BSc Digital Music Technology Programme Leader}, Leicester Media School, Faculty of Computing, Engineering and Media, DMU, Leicester, UK.\\
 ---\emph{Member of Music, Technology and Innovation - Institute for Sonic Creativity (MTI${^2}$)}, Leicester Media School, Faculty of Computing, Engineering and Media, DMU, Leicester, UK.\\
+---\emph{BSc Digital Music Technology Programme Leader}, Leicester Media School, Faculty of Computing, Engineering and Media, DMU, Leicester, UK.\\
 ---\emph{ Associate Fellow}, Higher Education Academy, United Kingdom.\\
 ---\emph{Women in NIME (WiNIME) Officer}, International Conference of New Interfaces for Musical Expression.
 %%\hrule
 \section*{Areas of Interest}
 %Design of Digital Musical Instruments (DMIs) • Real-time Interactive Systems for Music Performance • Human-Computer Interaction • Interaction Design • Tangible, Physical \& Social Computing • Computer-Supported Collaborative, Participatory \& Improvisation Music • Live Coding • Real-time Music Information Retrieval and Machine Learning • Multichannel Spatialization • Generative \& Algorithmic Music • Immersive Sound Experiences • Women in Music Tech • Arts \& Social Sciences Research Methods • STEAM Education • Data Visualization • Creative Programming
-Sound and Music Computing • New Interfaces for Musical Expression • Human-Computer Interaction • Tangible Interaction • Computer-Supported Collaborative Music • Live Coding • Real-time Music Information Retrieval and Machine Learning • Generative \& Algorithmic Music • Spatial Audio • Women in Music Tech • STEAM Education • Data Visualization • Creative Computing • Network Music • Web Audio • Audio Electronics • Audio DSP • Creative AI
+Sound and Music Computing • New Interfaces for Musical Expression • Human-Computer Interaction • Tangible Interaction • Computer-Supported Collaborative Music • Live Coding • Real-time Music Information Retrieval and Machine Learning • Generative \& Algorithmic Music • Spatial Audio • Women in Music Tech • STEAM Education • Data Visualization • Data Science • Creative Computing • Network Music • Web Audio • Audio Electronics • Audio DSP • Creative AI
 
 %\hrule
 \section*{Education}
@@ -189,7 +189,7 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 %\noindent
 
 \subsection*{Academic Grants, Honors, Awards \& Accolades}
-\years{10/2021--06/2022} \textsc{Future Research Leaders 2021/22 Programme} accolade. DMU, Leicester, UK.\\
+\years{10/2021--06/2022} \textsc{Future Research Leaders (FRL) 8 Programme} accolade. DMU, Leicester, UK.\\
 \years{2019c} \textsc{Web Audio Conference 2019 Best Paper Award} to Anna Xambó, Robin Støckert, Alexander Refsum Jensenius and Sigurd Saue. NTNU, Trondheim, Norway.\\
 \years{2019b} \textsc{The EUNIS DØRUP E-Learning Award} to Robin Støckert, Alexander Refsum Jensenius, Anna Xambó and Øyvind Brandtsegg. NTNU, Trondheim, Norway.\\
 %\years{2019a} \textsc{Travel grant for European research and promotion} (30,000 kr, approx. 3,000 \euro). NTNU, Trondheim, Norway.\\
@@ -211,7 +211,12 @@ Role: Creator \& Director.
 
 \subsection*{Principal Investigator}
 
-{
+\years{11/2021--06/2022}\textsc{Future Research Leaders 8 -- Development fund} \\
+Funding body: DMU. \\
+Project: Development fund that is part of the FRL Programme.\\
+Role: Lead Researcher/Coordinator. \\
+Total Pound Amount: 1,000 \pounds \\
+
 \years{04/2020-10/2021}\textsc{Human Data Interaction Network Plus/EPSRC Grant} \\
 Funding body: EPSRC. \\
 Project: ``MIRLCAuto: A Virtual Agent for Music Information Retrieval in Live Coding''.\\
@@ -222,7 +227,7 @@ Total Pound Amount: 10,000 \pounds \\
 
 \years{08/2018-12/2019}\textsc{Start-up Package (Startpakke)} \\
 Funding body: NTNU. \\
-The start-up package is awarded to women in permanent academic positions in a scientific field with underrepresentation of women to start their academic careers. With part of this funding I co-founded and was chair of the organisation Women Nordic in Music Technology (\emph{WoNoMute}) (see Enterpreneurship). \\
+The start-up package is awarded to women in permanent academic positions in a scientific field with an underrepresentation of women to start their academic careers. With part of this funding, I co-founded and was chair of the organisation Women Nordic in Music Technology (\emph{WoNoMute}) (see Entrepreneurship). \\
 Role: PI. \\
 Total Euro Amount: 250,000 kr, approx. 25,000 \euro \\
 
@@ -231,8 +236,8 @@ Funding body: Fundació Caixa de Sabadell. \\
 Project: ``Crossmedia infantil: Estudio sobre las nuevas tecnologías y la comunicación audiovisual en la escuela infantil y primaria (Crossmedia for Children: New Technologies and Audiovisual Communication in Primary Education)''.\\
 Role: PI. \\
 Collaborators: Eladi Martos (Co-PI), UB. \\
-Total Euro Amount: 3,000 \euro \\
-Candidate’s Share: 50\% (1,500 \euro)
+Total Euro Amount: 3,000 \euro
+%Candidate’s Share: 50\% (1,500 \euro)
 
 \subsection*{Collaborator}
 
@@ -289,15 +294,15 @@ Project: ``Transdata Pr.''.  \\
 Role: Creator, Director \& Video Editor.\\
 Collaborators: Gerard Roma (music), Oscar Abril Ascaso (essay). \\
 Total Euro Amount: 3,000 \euro\\ 
-Candidate’s Share: 50\% (1,500 \euro)\\[0.5cm]%hack
+%Candidate’s Share: 50\% (1,500 \euro)\\[0.5cm]%hack
 
 \years{09/1998--08/1999}\textsc{Audiovisual production grant} \\
 Funding body: Departament de Cultura de la Generalitat de Catalunya (Department of Culture of Catalan Government).\\
 Project: ``Mitösömä''.  \\
 Role: Creator, Director \& Animation Editor.\\
 Collaborators: Gerard Roma (music). \\
-Total Euro Amount: 3,000 \euro\\
-Candidate’s Share: 50\% (1,500 \euro)
+Total Euro Amount: 3,000 \euro
+%Candidate’s Share: 50\% (1,500 \euro)
 
 
 
@@ -342,7 +347,8 @@ Candidate’s Share: 50\% (1,500 \euro)
 
 \subsection*{Journal Articles}
 \noindent
-{\years{2021}\textbf{Xambó, A.} (Submitted) ``Virtual Agents in Live Coding: A Short Review''. \emph{e-Contact!}, (online journal).\\
+{\years{2021b}Roma, G., \textbf{Xambó, A.}, Green, O., Tremblay, P.A. (Submitted) ``A General Framework for Visualization of Sound Collections in Musical Interfaces''.\\
+{\years{2021a}\textbf{Xambó, A.} (Submitted) ``Virtual Agents in Live Coding: A Short Review''. \emph{e-Contact!}, (online journal).\\
 {\years{2020a}\textbf{Xambó, A.}, Støckert, R., Jensenius, A.R. and Saue, S. ``Learning to Code Through Web Audio: A Team-Based Learning Approach''. \emph{Journal of Audio Engineering Society}, 68(10), pp. 727--737. \emph{Special Issue on Web Audio}.}\\
 \years{2019}\textbf{Xambó, A.}, Lerch, A., Freeman, J. “Music Information Retrieval in Live Coding: A Theoretical Framework". \emph{Computer Music Journal}, 42(4), Winter 2018, pp. 9--25.\\
 \years{2018b}Roma, G. and \textbf{Xambó, A.}, Freeman, J. (2018). “User-independent Accelerometer Gesture Recognition for Participatory Mobile Music". \emph{Journal of Audio Engineering Society}, 66(6), pp. 430--438.\\
@@ -408,11 +414,16 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \years{2012}\textbf{Xambó, A.}; Laney, R.; Dobbyn, C. and Jordà, S. (September 11, 2012). “Towards a Taxonomy for Video Analysis on Collaborative Musical Tabletops". In \emph{BCS HCI 2012 Workshop on Video Analysis Techniques for HCI}. Birmingham, UK.\\
 \years{2011}\textbf{Xambó, A.}; Laney, R.; Dobbyn, C. and Jordà, S. (July 4, 2011). ``Collaborative Music Interaction on Tabletops: An HCI Approach'''. In \emph{BCS HCI 2011 Workshop on When Words Fail: What can Music Interaction tell us about HCI?}. Newcastle Upon Tyne.
 
+\subsection*{Dissertation}
+\noindent
+
+\years{2015}\textbf{Xambó, A.} (2015). ``Tabletop Tangible Interfaces for Music Performance: Design and Evaluation''. PhD thesis. The Open University. Milton Keynes, UK.
+
 \subsection*{Reports \& Working Papers}
 \noindent
 
-\years{2008}\textbf{Xambó, A.} (2008). Interfaces for Sketching Musical Compositions. Unpublished master's thesis. UPF.\\ 
-\years{2004}\textbf{Xambó, A.}, Martos, E. (2004). Crossmedia Infantil: Estudi sobre les noves tecnologies i la comunicació audiovisual a l'escola infantil i primària (Report of New Technologies and Audiovisual Communication in the Primary Education). Unpublished report. Supported by Fundació Caixa de Sabadell. In collaboration with UB.
+\years{2008}\textbf{Xambó, A.} (2008). ``Interfaces for Sketching Musical Compositions''. Master thesis. Unpublished. UPF. Barcelona, Spain\\ 
+\years{2004}\textbf{Xambó, A.}, Martos, E. (2004). ``Crossmedia Infantil: Estudi sobre les noves tecnologies i la comunicació audiovisual a l'escola infantil i primària'' (Report of New Technologies and Audiovisual Communication in the Primary Education). Report. Unpublished. Supported by Fundació Caixa de Sabadell. In collaboration with UB. Barcelona, Spain.
 
 \section*{Talks, Panels \& Oral Presentations}
 %\noindent
@@ -420,10 +431,11 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{External}
 \noindent
 
-\years{2021f} \textsc{Keynote Speaker (online)} (July 5, 2021). \emph{Web Audio Conference 2021 (WAC 2021)}. Barcelona, Spain. \href{https://youtu.be/7SWu3txbg-w}{[video]}\\ 
-\years{2021f} \textsc{Oral Presenter (online)} together with Jawad, K.  (June 19, 2021). "Challenging the Status Quo - WoNoMute". \emph{Féminisme - Musique - Technologie / Rencontre ManiFeste-2021}.Centre Wallonie-Bruxelles, Paris, France. \href{https://youtu.be/jXmNvd9ty_o}{[video]}\\
-\years{2021e} \textsc{Oral Presenter (online)} (June 15, 2021). “Live Coding with the Cloud and a Virtual Agent". \emph{NIME '21}. 
+\years{2021h} \textsc{Keynote Speaker (online)} (July 5, 2021). \emph{Web Audio Conference 2021 (WAC 2021)}. Barcelona, Spain. \href{https://youtu.be/7SWu3txbg-w}{[video]}\\ 
+\years{2021g} \textsc{Oral Presenter (online)} together with Jawad, K.  (June 19, 2021). "Challenging the Status Quo - WoNoMute". \emph{Féminisme - Musique - Technologie / Rencontre ManiFeste-2021}. Centre Wallonie-Bruxelles, Paris, France. \href{https://youtu.be/jXmNvd9ty_o}{[video]}\\
+\years{2021f} \textsc{Oral Presenter (online)} (June 15, 2021). “Live Coding with the Cloud and a Virtual Agent". \emph{NIME '21}. 
 \emph{NYU Shanghai}, Shanghai, China. \href{https://youtu.be/F4UoH1hRMoU}{[video]}\\
+\years{2021e} \textsc{Oral Presenter (online)} (May 21, 2021). “Audience engagement in musical performances through on-site and online networks". \emph{Computer Networks meet Music Instruments}. COSY Colloquium, Faculty of Computer Science, University of Vienna. Vienna, Austria.\\ 
 \years{2021d} \textsc{Panel Member (online)} (May 6, 2021). “Session 3: Musical performance \& education with AI" with Rafael Ramírez (Universitat Pompeu Fabra), George Waddell (Royal College of Music), Anna Xambó (De Montfort University), Luisa Pereira (New York University), Enric Guaus (Escola Superior de Música de Catalunya), Alia Ahmed Morsi (Universitat Pompeu Fabra) and moderated by Sergio Giraldo (Universitat Pompeu Fabra). \emph{ARTIFICIA Festival}. Barcelona, Spain. \href{https://youtu.be/o0arHV4s6Mo}{[video]}\\ 
 \years{2021c} \textsc{Oral Presenter (online)} (April 29, 2021). “Insights Into MIRLCAuto: A Virtual Agent for Music Information Retrieval in Live Coding". \emph{Coding Literacy, Practices and Cultures / Colloquium}. University of Magdeburg, Germany, and Film University KONRAD WOLF in Potsdam Babelsberg, Germany.\\ 
 \years{2021b} \textsc{Panel Member (online)} (April 16, 2021). “MusicLab 6: Human-Machine Improvisation" with Stefania Serafin (Aalborg University), Anna Xambó Sedó (De Montfort University), Nanette Nielsen (RITMO) and the performers, Christian Winther and Dag Erik Knedal Andersen, moderated by Alexander Refsum Jensenius (RITMO). \emph{RITMO Centre for Interdisciplinary Studies in Rhythm, Time and Motion}. Oslo, Norway. \href{https://youtu.be/yeIRxkm-kSc}{[video]}\\ 
@@ -514,7 +526,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \years{2010b} \textsc{Poster Presenter}. (December 21, 2010). Xambó, A., Laney, R., Dobbyn, C., Jordà, S. “Multi-touch Interaction Techniques for Collaborative Music Activities". \emph{DMRN+5: Digital Music Research Network One-day Workshop 2010}, Queen Mary, University of London. London.\\
 \years{2010a} \textsc{Poster Presenter}. (June 8, 2010). “Issues and Techniques for Collaborative Music Making on Multi-touch Surfaces". \emph{CRC PhD Student Conference 2010}, OU. Milton Keynes, UK.\\
 \years{2008b} \textsc{Poster Presenter}. (June 9--11, 2010). “Interfaces for Sketching Musical Compositions". \emph{SMC Summer School 2008}. Genoa, Italy.\\
-\years{2008a} \textsc{Poster Presenter} together with Roma, G. (June 6, 2008). “A Tabletop Waveform Editor for Live Performance". \emph{NIME '08}. Genoa, Italy.
+\years{2008a} \textsc{Poster Presenter} together with Roma, G. (June 6, 2008). “A Tabletop Waveform Editor for Live Performance". \emph{NIME '08}. Genoa, Italy.\\
 
 
 \subsection*{Workshops}
@@ -574,6 +586,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{Broadcasting}
 \noindent
 
+\years{2021c}Dirty Electronics Ensemble, Jon.Ogara \& Anna Xambó's “Dirty Dialogues". (November 8, 2021). Framework radio \#776\\
 \years{2021b}Anna Xambó's “Magnets". (April 12, 2021). Two Foot Left (Mixcloud playlist). Sheffield Live! Sheffield, UK.\\
 \years{2021a}Anna Xambó's “Magnets". (February 2, 2021). TOPLAP \#2 w/ hangar.org (Ramon Casamajó). Audio Formal on Dublab.es. Barcelona, Spain.\\
 \years{2020}Anna Xambó's “Magnets". (November 9, 2020). Sleepsang - Hyperobjects w/ Sleepsang (Mixcloud playlist). Sheffield, UK.\\
@@ -596,6 +609,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{Solo Performances}
 \noindent
 
+\years{2021e}\textbf{Xambó, A.} (November 10, 2021). `Magnets (live coding piece)''. \emph{Concert PACE 1 Live Music from MTI2. Works by Simon Emmerson, Anna Xambó Sedó, John Richards, and Leigh Landy"}. EMS 2021. Leicester, UK.\\
 \years{2021d}\textbf{Xambó, A.} (July 6, 2021). ``Live Coding with Crowdsourced Sounds and A Virtual Agent Companion''. \emph{WAC 21}. Barcelona, Spain. Online event. Streaming from Sheffield, UK.\\
 \years{2021c}\textbf{Xambó, A.} (June 17, 2021). ``A Live Coding Session With the Cloud and a Virtual Agent''. \emph{NIME 21}. Shanghai, China. Online event. Streaming from Sheffield, UK.\\
 \years{2021b}\textbf{Xambó, A.} (May 6, 2021). ``Sonic Haikus''. \emph{ARTIFICIA Festival}. Online event. Barcelona, Spain.\\
@@ -619,7 +633,8 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 
 \subsection*{Collaborative Performances}
 \noindent
-\years{2021}Goudarzi, V., \textbf{Xambó, A.} (September 24, 2021). “Livesourcing: Audience Participation in a Live Coding Performance" (online performance). \emph{Ear Taxi Festival}. Chicago, IL, USA.\\
+\years{2021b}Goudarzi, V., \textbf{Xambó, A.} (November 21, 2021). “immerse in the lake" (online performance). \emph{Jefferson Park EXP}. Chicago, IL, USA. Streaming from Sheffield, UK.\\
+\years{2021a}Goudarzi, V., \textbf{Xambó, A.} (September 24, 2021). “Livesourcing: Audience Participation in a Live Coding Performance" (online performance). \emph{Ear Taxi Festival}. Chicago, IL, USA. Streaming from Sheffield, UK.\\
 \years{2020}Schroeder, F., Meireles, M., Mannone, M., Papadomanolaki, M., Brown, N., Stolfi, A., Alarcón, X., \textbf{Xambó, A.} (July 28, 2020). “Absurdity" (telematic performance by the Female Laptop Orchestra (FLO)). \emph{Physically Distant \#2: More Online Talks on Telematic Performance}. Streaming from Sheffield, UK.\\
 \years{2019}Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. (December 4, 2019). “Trondheim EMP Repository processing". \emph{WAC 2019}. Rockheim, Trondheim, Norway.\\
 \years{2018e}Brown, N., Chudy, M., Dobson, L., Hoel, A.M., Ikkache, L., Pase, T., Schroeder, F., Stolfi, A., Wilkie, S., \textbf{Xambó, A.} (November 22, 2018). “Transmusicking II". Sonic Arts Research Center, Queen's University Belfast. Belfast, Northern Ireland.\\
@@ -743,7 +758,7 @@ Master of Music, Communication and Technology (MCT), Norwegian University of Sci
 Role: Creation of syllabus, creation of content, instruction and assessment.\\
 \years{10/2018}Course: \emph{MCT4000 Physical Computing Workshop} (28 h). \# Students: $\sim$15. \\
 Master of Music, Communication and Technology (MCT), Norwegian University of Science and Technology (NTNU), Trondheim, Norway.\\ 
-Role: Creation of syllabus, creation of content, instruction and assessment.\\
+Role: Creation of syllabus, creation of content, instruction and assessment.
 
 
 \subsection*{Undergraduate Courses}
@@ -843,17 +858,20 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \years{03/2004--05/2004}
 Course: \emph{Crossmedia infantil} (12 h). \# Students (3--4 years old): $\sim$8.\\
 Escola Glòries, Barcelona.\\
-Role: Co-creation of syllabus, creation of content, instruction and assessment.\\ [1.3cm]%hack
+Role: Co-creation of syllabus, creation of content, instruction and assessment.%\\ [1.3cm]%hack
 
 \section*{Supervision}
 %\noindent
 
 \subsection*{Master Students}
-\years{07/2021--10/2021}Creative portfolio \& short dissertation (master thesis) co-supervisor of Harri Bettsworth (Music Technology and Innovation, DMU). Master thesis title: \emph{``Exploring How Uncanny Sound Can Trigger Fear In Video Game''}.\\
-\years{01/2020--07/2020}Master thesis supervisor of Karolina Jawad (Music Communication Technology, NTNU). Master thesis title: \emph{``Gatekeepers by Design? Gender HCI for Audio and Music Hardware''}. Our publication at ICLI '20 (see Peer-Reviewed Conference Papers) has inspired this work.\\
-\years{01/2018--08/2018}Master thesis co-advisor of Tayjo Padmini Vaduru (Computer Science, QMUL). Master thesis title: \emph{``Moodscape Generator: Automated Generation of Soundscapes''}.\\
+\years{07/2021--10/2021}Creative portfolio \& short dissertation (master thesis) co-supervisor of Harri Bettsworth. Master thesis title: \emph{``Exploring How Uncanny Sound Can Trigger Fear In Video Game''}. Master programme: Music Technology and Innovation, DMU. \\
+\years{01/2020--07/2020}Master thesis supervisor of Karolina Jawad. Master thesis title: \emph{``Gatekeepers by Design? Gender HCI for Audio and Music Hardware''}. Master programme: Music Communication Technology, NTNU. Our publication at ICLI '20 (see Peer-Reviewed Conference Papers) has inspired this work.\\
+\years{01/2018--08/2018}Master thesis co-advisor of Tayjo Padmini Vaduru. Master thesis title: \emph{``Moodscape Generator: Automated Generation of Soundscapes''}. Computer Science, QMUL.\\
 \years{09/2015--05/2016}Co-advisor of Marc Huet and Travis Gasque (master's students in Digital Media, School of Literature, Media, and Communication) and Anna Weisling (PhD student in Digital Media, School of LMC) for their graduate design project TuneTable. This work has been part of Brian Magerko’s Digital Media studio course at Georgia Tech. From this work we have published at TEI '17 (see Peer-Reviewed Conference Papers) and we have informed a successful and competitive NSF-funded grant (Advancing Informal STEM Learning Grant).\\
-\years{09/2015--05/2017}Co-advisor of Pratik Shah (master student in Human-Centered Computing, School of Interactive Computing) with the research and design on adding collaborative features to EarSketch, an online platform for learning code by making music. This work has been part of the design and development of the NSF-funded project EarSketch, led by Jason Freeman. From this work we have published at the conferences ICLI '16 and AM '17, and also at the AES journal in 2018 (see Peer-Reviewed Conference Papers).
+\years{09/2015--05/2017}Co-advisor of Pratik Shah (master student in Human-Centered Computing, School of Interactive Computing) with the research and design on adding collaborative features to EarSketch, an online platform for learning code by making music. This work has been part of the design and development of the NSF-funded project EarSketch, led by Jason Freeman. From this work we have published at the conferences ICLI '16 and AM '17, and also at the AES journal in 2018 (see Peer-Reviewed Conference Papers).\\
+
+\subsection*{Undergraduate Students}
+\years{09/2021--06/2022}Ongoing supervision of three L6 undergraduate students in music technology for their final research projects.
 
 \section*{Mentoring}
 \years{08/2018--12/2019}Mentor and advisor of the members of the organization \emph{WoNoMute}, including the co-chair and research assistant Karolina Jawad, and the research assistants Mari Lesteberg and Ane Bjerkan.\\
@@ -862,12 +880,12 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \section*{Assessment}
 \noindent
 
-\years{09/2021}External PhD examiner for Joaquín Roberto Díaz Durán. PhD programme: Investigación en Humanidades, Artes y Educación (Research in Humanities, Arts and Education), Facultad de Bellas Artes de Cuenca, Universidad de Castilla - La Mancha, Spain.\\
-\years{09/2021}External PhD examiner for Jack Armitage. PhD programme: Media \& Arts Technologies, Queen Mary University of London, UK.\\
+\years{09/2021}External PhD examiner for Joaquín Roberto Díaz Durán. PhD thesis title: \emph{"Interfaz Cíborg: Dispositivo interactivo para reflexionar la relación arte, tecnología y cuerpo en la performance"}. PhD programme: Investigación en Humanidades, Artes y Educación (\emph{Research in Humanities, Arts and Education}), Facultad de Bellas Artes de Cuenca, Universidad de Castilla - La Mancha, Spain.\\
+\years{09/2021}External PhD examiner for Jack Armitage. PhD programme: Media \& Arts Technologies, Queen Mary University of London, UK. PhD thesis title: \emph{"Subtlety and Detail in Digital Musical Instrument Design"}.\\
 \years{02/2021}PhD review (midway assessment) for Sam Topley, PhD programme: DMU/Midlands4Cities. Leicester, UK.\\
 \years{05/2020}External assessor, IMV PhD Midway Assessment for Qichao Lan, Department of Musicology, Faculty of Humanities, University of Oslo, Norway.\\
-\years{08/2019}External MSc examiner for Torgrim Rudland Næss, Department of Informatics, Faculty of Mathematics and Natural Sciences, University of Oslo, Norway.\\
-\years{11/2018--06/2019}Appraisal Committee Chair for Hilmar Thordarson, Norwegian Programme for Artistic PhD Research, Norwegian Science and Technology University, Trondheim, Norway.
+\years{08/2019}External MSc examiner for Torgrim Rudland Næss, Master thesis title: \emph{"A Physical Intelligent Instrument Using Recurrent Neural Networks"}. Department of Informatics, Faculty of Mathematics and Natural Sciences, University of Oslo, Norway.\\
+\years{11/2018--06/2019}Appraisal Committee Chair for Hilmar Thordarson, PhD thesis title: \emph{"Condis–conducting Digital System Extended Role Of The Conductor in Mixed Music Performance"}. Norwegian Programme for Artistic PhD Research, Norwegian Science and Technology University, Trondheim, Norway. 
 
 \section*{Additional Experience}
 %\noindent
@@ -965,7 +983,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \years{2017a}\textsc{Conference Local Committee Member}. \emph{International Conference on Computational Creativity 2017}, Georgia Tech. Atlanta, GA, USA.\\
 \years{2016}\textsc{Conference Music/Artworks Co-Chair}. \emph{Web Audio Conference 2016}, Georgia Tech. Atlanta, GA, USA.\\
 \years{2011b}\textsc{Conference Session Chair} (``Laptop/Coding/NI''). \emph{International Computer Music Conference}. Huddersfield, UK.\\
-\years{2011a}\textsc{Conference Committee Member}. \emph{CRC PhD Student Conference 2011}, OU. Milton Keynes, UK.\\
+\years{2011a}\textsc{Conference Committee Member}. \emph{CRC PhD Student Conference 2011}, OU. Milton Keynes, UK.
 
 \subsection*{Conference Programme Committee Member (Reviewer)}
 \noindent
@@ -1088,7 +1106,7 @@ Music \& Audio Apps: DAWs (Ableton Live, Cubase, Reaper, Logic Pro), Max/MSP, Pu
 Text \& Multimedia Analysis Apps: ELAN, MAXQDA, NVivo, VCode.\\
 Other Apps: Graphics and multimedia authoring apps (AfterEffects, Blender, Dreamweaver, Final Cut Pro, Flash, Freehand, Illustrator, InDesign, Photoshop, Premiere, Processing, Combustion, 3DMax), LaTeX, MS Office suite. CMS (Drupal, WordPress). Static site generators (Jekyll, 11ty). Code editors (Atom, Visual Studio Code).\\
 Online Learning Platforms: Blackboard, Canvas, Teams.\\
-Hardware: Arduino, Bela, Lindos.\\
+Hardware: Arduino, Bela, Lindos, Raspberry Pi.\\
 Circuit simulators: Tinkercad, OrCAD.
 
 %\vspace{1cm}
