--- a/Xambo.brief.CV.tex
+++ b/Xambo.brief.CV.tex
@@ -107,7 +107,7 @@ Senior Lecturer, DMU, 2020--present. I am teaching undergraduate courses in audi
 I have been associate professor, Norwegian University of Science and Technology (NTNU) (2018--19) where I also was Music Communication \& Technology (MCT) master programme council leader and MCT programme study leader at NTNU, visiting lecturer and postdoc at Queen Mary University of London (2017--19) and postdoc at Georgia Tech (2015--17). Also, I have been co-founder and chair of the organization Women Nordic Music Technology (WoNoMute) (2018--19) and co-founder and co-chair of the organization Women in Music Tech at Georgia Tech (2016--17). From 2013--14, I was a research fellow at the London Knowledge Lab, University College London Institute of Education.
 I have been working since 2000 as interaction designer, web designer and web developer with strong background on Internet technologies. I have been employee in companies for 10 years (2000--10) as well as co-founder of my own interactive media studio (2004--10).\\
 
-{\textbf{Grants/Awards/Accolades}} from DMU Future Research Leaders Programme (2021-22); HDI / EPSRC (2020--21); NTNU (2019, 2018--20); Sonic Arts Research Center (2018); NCWIT (2017); National Science Foundation AISL (2016); Women in Music Information Retrieval (2016); OU (2010--13, 2010); Fundació Caixa de Sabadell (2003--04); and Generalitat de Catalunya (1998--99, 2001--02).\\
+{\textbf{Grants/Awards/Accolades}} from DMU Future Research Leaders Programme (2021-22); HDI/EPSRC (2020--21); NTNU (2019, 2018--20); Sonic Arts Research Center (2018); NCWIT (2017); NSF AISL (2016); WiMIR (2016); OU (2010--13, 2010); Fund. Caixa de Sabadell (2003--04); and Generalitat de Catalunya (1998--99, 2001--02).\\
 
 {\textbf{Peer-Reviewed Journal Publications}} in Computer Music Journal (2019); Journal of Audio Engineering Society (2018, 2020); Interacting with Computers (2017); International Journal of Social Research Methodology, (2017); Qualitative Research (2017); ACM Transactions on Computer-Human Interaction (2013); and Information Processing \& Management (2013).\\
 
@@ -115,9 +115,9 @@ I have been working since 2000 as interaction designer, web designer and web dev
 
 {\textbf{Invited Keynote Talks}} at WAC (2021); SMC (2020); Women in Sound Women on Sound (2016).\\
 
-{\textbf{Performances}} at Network Music Festival (2020); Eulerroom Equinox (2020); PACE / DMU (2020); ICLC (2019); Dokkhuset (2018); Sonic Arts Research Center (2018); Inter/sections (2018); WAC (2017--21); Cube Fest (2018); NIME (2017--18, 2021); TEI Conference (2018); Audio Mostly (2017); Root Signals Festival (2017); Freedonia (2017); Women in Sound Women on Sound (2016); Phonos (2013); Niu (2012); Mostra Sonora i Visual (2006); Minima Festival (2004); and Sonar Festival (2002).\\
+{\textbf{Performances}} at EarTaxi (2021); Jefferson Park EXP (2021); Network Music Festival (2020); Eulerroom Equinox (2020); PACE/DMU (2020--21); ICLC (2019); Dokkhuset (2018); Sonic Arts Research Center (2018); Inter/sections (2018); WAC (2017--21); Cube Fest (2018); NIME (2017--18, 2021); TEI  (2018); Audio Mostly (2017); Root Signals Festival (2017); Freedonia (2017); Women in Sound Women on Sound (2016); Phonos (2013); Niu (2012); Mostra Sonora i Visual (2006); Minima Festival (2004); and Sonar Festival (2002).\\
 
-{\textbf{Conference Organizer}} for WAC (2019, general co-chair; 2017, session chair; 2016, music/artworks co-chair); NIME (2019, paper co-chair, session chair); ICLI (2020, conference local committee member); ACM Creativity \& Cognition (2019, programme committee member); ACM Spatial User Interaction (2018, programme committee member); Computational Creativity (2017, local committee member); International Computer Music Conference (2011, session chair); and TEI Conference (2020--2021, programme committee member).\\
+{\textbf{Conference Organizer}} for WAC (2019, general co-chair; 2017, session chair; 2016, music/artworks co-chair); NIME (2019, paper co-chair, session chair); ICLI (2020, conference local committee member); Computational Creativity (2017, local committee member).\\
 
 {\textbf{Interviews/Press Coverage}} in OnCurating.org (2020); Ballade.no (2019); Girls Geek Dinner Trondheim (2019); ACM Interactions (2018); Netlabel Interview Project (2018); and Wallifornia Music Tech (2018).\\
 
